# Game_for_Technology_of_Programming

./: ..gitignore.kate-swp  CMakeLists.txt  README.md
include/: Board.h  Cell.h  Creator.h  Decorator.h  Different_Types_of_Pieces.h  Game.h  Piece.h  Turn.h
src/: Board.cpp  CMakeLists.txt  Cell.cpp  Decorator.cpp  Different_Types_of_Pieces.cpp  Game.cpp  Piece.cpp  Turn.cpp  main.cpp
